--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* ===================
        Topbar
    =================== */
@@ -47,16 +48,16 @@
   align-items: center;
 }
 
-.main-nav nav ul {
+.main-nav ul {
   margin: 0;
   padding: 0;
   display: block;
 }
-.main-nav nav ul li {
+.main-nav ul li {
   list-style: none;
   float: left;
 }
-.main-nav nav ul li a {
+.main-nav ul li a {
   text-decoration: none;
   padding: 1rem 1.6rem;
   color: #ffffff;
@@ -65,6 +66,221 @@
   line-height: 1;
 }
 
+/* =================================
+      All about mobile navigations
+   ================================= */
+nav {
+  text-align: center;
+  width: 100%;
+  position: relative;
+  height: auto;
+  overflow: hidden;
+  background: none;
+}
+
+nav ul {
+  text-align: center;
+}
+
+nav ul li {
+  display: inline-block;
+}
+
+nav ul li a {
+  color: #333;
+  display: inline-block;
+  padding: 1em 3em;
+  text-decoration: none;
+  border-bottom: 2px solid #fff;
+  transition-property: all 0.2s linear 0s;
+  -moz-transition: all 0.2s linear 0s;
+  -webkit-transition: all 0.2s linear 0s;
+  -o-transition: all 0.2s linear 0s;
+  font-size: 16px;
+}
+
+nav ul li a:hover {
+  color: #f9c14a;
+}
+
+.button {
+  right: 50px;
+  top: 6px;
+  z-index: 99999;
+  font-size: 30px;
+}
+
+.button a {
+  text-decoration: none;
+}
+
+.btn-open:after {
+  content: "";
+  font-family: "FontAwesome";
+  transition-property: all 0.2s linear 0s;
+  -moz-transition: all 0.2s linear 0s;
+  -webkit-transition: all 0.2s linear 0s;
+  -o-transition: all 0.2s linear 0s;
+  color: #f9c14a;
+}
+
+.btn-open:hover:after {
+  color: #f9c14a;
+}
+
+.btn-close:after {
+  color: #fff;
+  content: "";
+  font-family: "FontAwesome";
+  transition-property: all 0.2s linear 0s;
+  -moz-transition: all 0.2s linear 0s;
+  -webkit-transition: all 0.2s linear 0s;
+  -o-transition: all 0.2s linear 0s;
+}
+
+.btn-close:hover:after {
+  color: #f9c14a;
+}
+
+/*overlay*/
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background: #333;
+  overflow: auto;
+  z-index: 99998;
+}
+
+.wrap {
+  color: #e9e9e9;
+  text-align: center;
+  max-width: 90%;
+  margin: 0 auto;
+}
+
+.wrap ul.wrap-nav {
+  border-bottom: 1px solid #575757;
+  text-transform: capitalize;
+  padding: 150px 0px 100px;
+}
+
+.wrap ul.wrap-nav li {
+  font-size: 20px;
+  display: inline-block;
+  vertical-align: top;
+  width: 24%;
+  position: relative;
+}
+
+.wrap ul.wrap-nav li a {
+  color: #f9c14a;
+  display: block;
+  padding: 8px 0;
+  text-decoration: none;
+  transition-property: all 0.2s linear 0s;
+  -moz-transition: all 0.2s linear 0s;
+  -webkit-transition: all 0.2s linear 0s;
+  -o-transition: all 0.2s linear 0s;
+}
+
+.wrap ul.wrap-nav li a:hover {
+  color: #f0f0f0;
+}
+
+.wrap ul.wrap-nav ul {
+  padding: 20px 0;
+}
+
+.wrap ul.wrap-nav ul li {
+  display: block;
+  font-size: 13px;
+  width: 100%;
+  color: #e9e9e9;
+}
+
+.wrap ul.wrap-nav ul li a {
+  color: #f0f0f0;
+}
+
+.wrap ul.wrap-nav ul li a:hover {
+  color: #f9c14a;
+}
+
+.social {
+  font-size: 25px;
+  padding: 20px;
+}
+
+.social p {
+  margin: 0;
+  padding: 20px 0 5px 0;
+  line-height: 30px;
+  font-size: 13px;
+}
+
+.social p a {
+  color: #34B484;
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+}
+
+.social-icon {
+  width: 80px;
+  height: 50px;
+  background: #e9e9e9;
+  color: #333;
+  display: inline-block;
+  margin: 0 20px;
+  transition-property: all 0.2s linear 0s;
+  -moz-transition: all 0.2s linear 0s;
+  -webkit-transition: all 0.2s linear 0s;
+  -o-transition: all 0.2s linear 0s;
+}
+
+.social-icon:hover {
+  background: #f9c14a;
+  color: #f0f0f0;
+}
+
+.social-icon i {
+  margin-top: 12px;
+}
+
+@media screen and (max-width: 48em) {
+  .wrap ul.wrap-nav > li {
+    width: 100%;
+    padding: 20px 0;
+    border-bottom: 1px solid #575757;
+  }
+
+  .wrap ul.wrap-nav {
+    padding: 30px 0px 0px;
+  }
+
+  nav ul {
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  .social {
+    color: #c1c1c1;
+    font-size: 25px;
+    padding: 15px 0;
+  }
+
+  .social-icon {
+    width: 100%;
+    height: 50px;
+    background: #fff;
+    color: #333;
+    display: block;
+    margin: 5px 0;
+  }
+}
 /* ===================
        Top Slider
    =================== */
